Added security handling on gateway.